--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
     <section id="quote">
       <div class="quote-block">
         <p class="quote">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-          corporis, reprehenderit qui maiores accusamus.
+          The 5 most AMAZING and GENUINE people I have worked with.
         </p>
-        <p class="quoter">- Quoter</p>
+        <p class="quoter">- Tiltasaurus</p>
       </div>
     </section>
 
     <section id="cta">
       <div class="call-to-action">
         <div>
-          <h2>Call to action! It's time!</h2>
+          <h2>This button does nothing!</h2>
           <p>
-            Sign up for our product by clicking that button right over there!
+            No really, it does absolutely nothing. Do not click it. You're
+            wasting your own time >.<
           </p>
         </div>
-        <button class="cta-btn">Sign up</button>
+        <button class="cta-btn">Don't Click</button>
       </div>
     </section>
 
