--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 class="hero-title">The ACTUAL Best Team.</h2>
           <p class="hero-content">
             Take a look inside one of South Africa's best
-            <strong>ALL</strong> female League of Legends teams...
+            <strong>ALL female</strong> League of Legends teams...
           </p>
           <button class="hero-btn">Follow Us &#10084;</button>
         </div>
