--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="hero-section">
         <div class="container">
-          <h2 class="hero-title">The ACTUAL Best Team.</h2>
+          <h2 class="hero-title">Team Harlequins</h2>
           <p class="hero-content">
             Take a look inside one of South Africa's best
             <strong>ALL female</strong> League of Legends teams...
