--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
     <section id="cta">
       <div class="call-to-action">
         <div>
-          <h2>This button does nothing!</h2>
+          <h2>Sign up for our newsletter!</h2>
           <p>
-            No really, it does absolutely nothing. Do not click it. You're
-            wasting your own time >.<
+            We send out a weekly newsletter that dives deep into esports and Team Harlequins role within the female gaming space. Sign up if would like to stay updated with everything Team Harlequins is doing.
           </p>
         </div>
-        <button class="cta-btn">Don't Click</button>
+        <button class="cta-btn">Sign Up</button>
       </div>
     </section>
 
