--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div>
           <h2>Sign up for our newsletter!</h2>
           <p>
-            We send out a weekly newsletter that dives deep into esports and Team Harlequins role within the female gaming space. Sign up if would like to stay updated with everything Team Harlequins is doing.
+            We send out a weekly newsletter that dives deep into esports and Team Harlequins role within the female gaming space. 
+            Sign up if would like to stay updated with everything Team Harlequins is doing.
           </p>
         </div>
         <button class="cta-btn">Sign Up</button>
