--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </p>
           <button class="hero-btn">Follow Us &#10084;</button>
         </div>
-        <img src="./images/hero-section.jpg" alt="" class="hero-img" />
+        <img src="./images/hero-section.jpg" alt="Team Harlequins team photo." class="hero-img" />
       </div>
     </header>
 
@@ -37,29 +37,29 @@
         <h2 class="section-header">Meet Our Players</h2>
         <div class="players">
           <figure class="player">
-            <img src="./images/Roripoppu.png" alt="" class="player-img" />
+            <img src="./images/Roripoppu.png" alt="Top laner, Roripoppu profile picture" class="player-img" />
             <figcaption class="player-description">
               Top Lane - Roripoppu
             </figcaption>
           </figure>
           <figure class="player">
-            <img src="./images/KvetchR.png" alt="" class="player-img" />
+            <img src="./images/KvetchR.png" alt="Jungler, KvetchR profile picture" class="player-img" />
             <figcaption class="player-description">Jungle - KvetchR</figcaption>
           </figure>
           <figure class="player">
-            <img src="./images/HecateM.png" alt="" class="player-img" />
+            <img src="./images/HecateM.png" alt="Mid laner, HecateM profile picture" class="player-img" />
             <figcaption class="player-description">
               Mid Lane - HecateM
             </figcaption>
           </figure>
           <figure class="player">
-            <img src="./images/Chibidoll.png" alt="" class="player-img" />
+            <img src="./images/Chibidoll.png" alt="AD Carry, Chibidoll profile picture" class="player-img" />
             <figcaption class="player-description">
               AD Carry - Chibidoll
             </figcaption>
           </figure>
           <figure class="player">
-            <img src="./images/LunaLavender.png" alt="" class="player-img" />
+            <img src="./images/LunaLavender.png" alt="Support, LunaLavender profile picture" class="player-img" />
             <figcaption class="player-description">
               Support - LunaLavender
             </figcaption>
